Game page english updated