@@ -27,13 +27,19 @@ layout: null
 ____
 
 
-## Objectives and Use
+## Goals and Use
 
 Wollok-Game allows you to create games, building a board where you put different visual characters (objects). 
 
 ## The game
 
-Main object is `game` object, located in Wollok _lib_ file. To start a game, just write in console:
+Main object is `game` object, located in Wollok _lib_ file. You must import it in your file (.wlk o .wpgm):
+
+```wollok
+import wollok.game.*
+```
+
+To start a game, just write in console:
 
 ```js
 >>> game.start()
@@ -43,6 +49,58 @@ Now you should see a board in another window of your operating system.
 <br>
 
 ![Tablero vacío](../../../documentacion/conceptos/images/tableroVacio.png)
+
+## Using game
+
+### From REPL console - no file ###
+
+You can run REPL console with no associated file and import Wollok Game:
+
+```wollok
+>>> import wollok.game.*
+```
+
+Then you'll be able to send messages to the corresponding objects, as usual: 
+
+```wollok
+>>> game.start()
+```
+
+### From REPL console - from wlk file ###
+
+If you define a `.wlk` file with visual objects, you can execute it in REPL console:
+
+Archivo ejemplo.wlk
+
+```wollok
+import wollok.game.*
+
+object someGame {
+  method begin(){
+    game.start()
+  }
+}
+```
+
+Then you can send a message to the custom object:
+
+```wollok
+>>> someGame.begin()
+```
+
+### From program
+
+If you create a `.wpgm` file (Wollok program), you can execute it directly. 
+
+File gameExample.wpgm
+
+```wollok
+import wollok.game.*
+
+program firstWollokGameProgram {
+  game.start()
+}
+```
 
 ## The board
 
@@ -57,11 +115,15 @@ Here you will add your game objects. Board has the following properties:
  
 #### Example
 
-```js
->>> game.width(10)
->>> game.height(7)
->>> game.title("A whole new Game")
->>> game.start()
+```wollok
+import wollok.game.*
+
+program firstWollokGameProgram {
+  game.width(10)
+  game.height(7)
+  game.title("Juego")
+  game.start()
+}
 ```
 
 <div class="container text-center">
@@ -69,93 +131,65 @@ Here you will add your game objects. Board has the following properties:
 </div>
 <br>
 
-
 ## Positions
 
 To put objects in the board we need to specify its **location**. In Wollok we have `Position` class (in _lib_ library) which provides a pair _(x,y)_ implementation. You can instantiate a Position using different approaches:
 
-```js
-// Invoking two parameter constructor
->>> new Position(2, 3)
-(2,3) //-> (x=2; y=3)
->>> new Position()
-(0,0) //-> default constructor uses origin of coordinate system
-
-// Asking game position
+```scala
 >>> game.at(2,3)
-(2,3)
+2@3 // x = 2, y = 3 
 >>> game.origin()
-(0,0)
+0@0
 >>> game.center()
-(2,2) //-> Calculated based on height & width
+2@2 //-> Calculated based on height & width
+```
+
+Positions have messages for x and y coordinates:
+
+```wollok
+>>> game.at(2,3).x()
+2
+>>> game.at(2,3).y()
+3
 ```
 
 #### Drawing objects
 
-Positions allow us to add an object in the board.
-```js
->>> var position = game.origin()
-(0,0)
->>> position.drawElement(wollok)
-```
+To incorporate any object to our game, it must have a `position()` method returning the location it should have on the board. This method can be a property or a calculated method (as simple or complex as you like).
 
-##### Another option
-
-You can also define a position for any visual object (with a reference _position_ or a message _position()_) and tell the game to add an element in board:
-
-###### In example.wlk
-```js
+```wollok
+// as a property
 object wollok {
-  var position = game.origin()
+  var property position = game.origin()
 }
+
+// as a calculated method
+object wollok {
+  var property centered = false
+  method position() = if (centered) game.center() else game.origin()
+}
+``` 
+
+Then you can add a visual object by writing
+
+```wollok
+game.addVisual(wollok)
 ```
 
-###### And voilá...
-```js
->>> game.addVisual(wollok)
-```
-
-...visual object is shown in board!
+And there you have!
 
 ![Tablero con wollok](../../../documentacion/conceptos/images/tableroConWollok.png)
 
-
-#### Moving objects
-
-Positions are **mutable** properties, so its components _(x, y)_ can change in time. Then, we can **move objects** in board without changing its position object (or even worse, having to remove and add it again).
-
-```js
->>> position   // remember position reference is defined below
-(0,0)
->>> position.moveRight(2)
->>> position.moveUp(3)
->>> position
-(2,3)
-```
 
 ## The character
 
 Wollok Game allows you to define a _main character_, movable with arrow keys of the keyboard. You just set **the character** of the game before it starts.
 
-```js
->>> game.addVisualCharacter(wollok)
-//or game.origin().drawCharacter(wollok)
->>> game.start()
+```wollok 
+game.addVisualCharacter(wollok)
 ```
 
 ![wollok-character](../../../documentacion/conceptos/images/wollokCharacter.gif)
-
-
-### Look who's talking!
-
-**Game objects can talk, too**, if you send a message `game.say(visualObject, textToSay)`:
-```js
->>> game.say(wollok, wollok.howAreYou())
-```
-![Los objetos hablan](../../../documentacion/conceptos/images/objetosHablan.png)
-
-**Tip:** visual objects can scream too, just try `scream()` message instead of `say()`
-
 
 ## Visuals
 
@@ -167,36 +201,46 @@ By now, we can show objects in the board as _wollok objects_. To change default 
 #### Example
 
 <div class="container text-center">
-  <img src="images/imgExplorerGame.png" class="img-fluid z-depth-1">
+  <img src="/images/tour/imgExplorerGame.png" class="img-fluid z-depth-1">
 </div>
 <br>
 
 ###### In example.wlk
 
-```js
+```wollok
+import wollok.game.*
+
 object box {
   method image() = "box.png"
-}
+  method position() = game.center()
+} 
 ```
 
 ###### Let's execute it
 
-```js
+```wollok
 >>> game.start()
->>> game.center().drawElement(box)
+>>> game.addVisual(box)
 ```
 
 ![Caja Game](../../../documentacion/conceptos/images/cajaGame.png)
 
 > ![Warning](../../../documentacion/conceptos/images/warning.png) IMPORTANT MESSAGE : Wollok Game doesn't resize the images you show, so you have to manually adjust **size** and **orientation** according to your game.
 
+### Look who's talking!
+
+**Game objects can talk, too**, if you send a message `game.say(visualObject, textToSay)`:
+
+```wollok
+game.say(wollok, wollok.howAreYou())
+```
+
+![Los objetos hablan](../../../documentacion/conceptos/images/objetosHablan.png)
+
+
 ## An interactive game
 
 Now we will see how objects interact with game, to be more challenging.
-
-### Using REPL console
-
-An easy way is to send messages through **REPL console**. You can change size, position, etc. and this changes will be reflected in board.
 
 ### Collisions
 
@@ -207,134 +251,66 @@ When two objects share the same position, Wollok Game throws a _collision_ event
 ![colision-caja](../../../documentacion/conceptos/images/colisionCaja.gif)
 
 ###### In example.wlk
-```js
+
+```wollok
+import wollok.game.*
+
 object wollok {
-  const property position = game.origin()
-  
-  method goHome() {
-    position.x(0)
-    position.y(0)
-  }
+  var property position = game.origin()
+  method howAreYou() = "I am Wolloktastik!"
+  method image() = "wollok.png"
 }
 
 object box {
   var property position = game.center()
   method image() = "box.png"
-} 
-```
-
-**Tip:** if you need the box image you can download it in assets folder of [sokoban project](https://github.com/wollok/sokobanGame) and rename "caja.png" to "box.png".
-
-
-###### Executing
-```js
->>> game.addVisualCharacter(wollok) // Movable with arrow keys
->>> game.center().drawElement(box)
->>> game.whenCollideDo(box, { character => character.goHome() })
-  // When a character collides with box, it goes to initial position
->>> game.start()
-```
-
-### Programs
-
-You can also generate a Wollok program (.wpgm extension), where a main _character_ moves over the board when events are fired from keyboard, and several things happens...
-
-Lets code out REPL example into a program, importing wollok wko and box definitions:
-
-```js
-program firstWollokGameProgram {
-  game.addVisualCharacter(wollok)
-  game.center().drawElement(box)
-  game.whenCollideDo(box, { character => character.goHome() })
-  game.start()
+  method goUp(){
+    position = position.up(1)
+  }
 }
-```
 
-#### Changing board background
-
-You can change out board background, replacing default one with [any picture you like](https://www.google.com.ar/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwimy6fJtvTcAhVFxpAKHRdhBK4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.todopaisajes.com%2Ffondos-de-pantalla-de-playas&psig=AOvVaw10Rdr1CY3aFnRTDZP9Pd-r&ust=1534606917743804). Download it to a new source folder, in this case called `assets`, and add in your program a message to `game` object:
-
-```js
 program firstWollokGameProgram {
-  game.width(10)
-  game.height(10)
-  game.boardGround("beach.jpg") // replace here beach.jpg with the name you used
-```
-
-Now we see a new image in game board:
-
-![tablero con fondo especial](../../../documentacion/conceptos/images/tableroConFondoEspecial.png)
-
-From now on we will go back to default and less distracting background.
-
-
-#### Reporting errors
-
-When things go wrong, our main character catches error messages and alert us. Lets suppose we change collider block between our main character wollok and the box:
-
-```js
-program firstWollokGameProgram {
-  game.addVisualCharacter(wollok)
-  game.center().drawElement(box)
-  game.whenCollideDo(box, { 
-    character => character.goHome()
-    const a = 1 / 0
+  game.addVisualCharacter(wollok)  //Para que se pueda mover con las flechas
+  game.addVisual(box)
+  // Once the character collides with the box, the former speaks and the latter moves
+  game.whenCollideDo(wollok, { element => 
+    element.goUp()
+    game.say(wollok,wollok.howAreYou())
   })
   game.start()
 }
 ```
 
-When wollok and box collides, wollok reports a "division by zero" error:
-
-![wollok reporta error](../../../documentacion/conceptos/images/errorReporter1.gif)
-
-In Wollok Game, if there is a main character, it is responsible to catch and report any error inside the game. Otherwise, any visual object in board will do that.
-
-Anyway, we can configure _error reporter object_ to another object, such as the box:
-
-```js
-program firstWollokGameProgram {
-  game.addVisualCharacter(wollok)
-  game.center().drawElement(box)
-  game.errorReporter(box)
-  ...
-```
-
-So lets see what happens now when wollok and the box collides and an error is thrown:
-
-![caja reporta error](../../../documentacion/conceptos/images/errorReporter2.gif)
-
+**Tip:** if you need the box image you can download it in assets folder of [sokoban project](https://github.com/wollok/sokobanGame) and rename "caja.png" to "box.png".
 
 #### Automatic events
 
 You can configure an automatic event, such as **box should move every 2 seconds**, if you send `onTick()` message which expects a block to be called every n milliseconds:
 
-```js
+```wollok
 program firstWollokGameProgram {
   game.addVisualCharacter(wollok)
-  game.addVisual(box)  // see warning below
+  game.addVisual(box)  // IMPORTANT: see warning below
+  // every 2 seconds, move the box
+  game.onTick(2000, "movement", { box.moveOn() })
   //
-  // moving box every 2 seconds
-  game.onTick(2000, { box.moveOn() })
-  //
-  game.whenCollideDo(box, { character => character.goHome() })
   game.start()
 }
 ```
 
-> VERY IMPORTANT: the box should be added into the game using `game.addVisual(box)` and not like before: `game.center().drawElement(box)`, it will listen all kind of events (and eventually will be able to move).
-
 `moveOn()` method in box object will randomly update its position, based on board height and width:
 
-```js
+```wollok
 object box {
   var property position = game.center()
   method image() = "box.png"
   method moveOn() {
-    const x = 0.randomUpTo(game.width() - 1).truncate(0)
-    const y = 0.randomUpTo(game.height() - 1).truncate(0)
-    self.position().x(x)
-    self.position().y(y)
+    const x = 0.randomUpTo(game.width()).truncate(0)
+    const y = 0.randomUpTo(game.height()).truncate(0)
+    // another option
+    // const x = (0.. game.width() - 1).anyOne() 
+    // const y = (0.. game.height() - 1).anyOne() 
+    position = game.at(x,y) 
   }
 }
 ```
@@ -346,22 +322,21 @@ When program is executed, we'll see a box movement every 2 seconds (and wollok o
 
 #### Keyboard events
 
-Every time the user hits a key, an event is fired, so it is a good starting point to read `keyboard` wko documentation. Lets see this example, where we activate/deactivate box automatic movement when the user presses ENTER key:
+Every time the user hits a key, an event is fired, so it is a good starting point to read `keyboard` wko documentation. Lets see this example, where we activate box automatic movement when the user presses ENTER key, and stop that automatic event by pressing `p` key:
 
-```java
-import example.*
+```wollok
 import wollok.game.*
 
 program firstWollokGameProgram {
-  var boxMoves = true
   game.addVisualCharacter(wollok)
   game.addVisual(box)
-  game.onTick(2000, { if (boxMoves) box.moveOn() })
-  //
-  // ENTER key is caught
-  keyboard.enter().onPressDo { boxMoves = !boxMoves }  
-  //
-  game.whenCollideDo(box, { character => character.goHome() })
+  
+  game.onTick(2000, "movement",{ box.moveOn() })
+
+  // ENTER key pressed event
+  keyboard.enter().onPressDo { game.say(wollok, wollok.howAreYou()) }
+  // p key pressed
+  keyboard.p().onPressDo { game.removeTickEvent("movement") }  // Stops the "movement" tick event
   game.start()
 }
 ```
@@ -375,7 +350,7 @@ Here is our live demo:
 
 Lets add some attributes to wollok wko:
 
-```js
+```wollok
 object wollok {
   var property position = game.origin()
   var version = "1.7.0"
@@ -391,16 +366,92 @@ If we don't want to show overwhelming information to user, we can send `hideAttr
 
 ```js
 program firstWollokGameProgram {
-  var boxMoves = true
   game.addVisualCharacter(wollok)
+  // ...
   game.hideAttributes(wollok)
-  ...
 ```
+
+#### Changing board background
+
+You can change out board background, replacing default one with [any picture you like](https://www.google.com.ar/url?sa=i&source=images&cd=&cad=rja&uact=8&ved=2ahUKEwimy6fJtvTcAhVFxpAKHRdhBK4QjRx6BAgBEAU&url=https%3A%2F%2Fwww.todopaisajes.com%2Ffondos-de-pantalla-de-playas&psig=AOvVaw10Rdr1CY3aFnRTDZP9Pd-r&ust=1534606917743804). Download it to a new source folder, in this case called `assets`, and add in your program a message to `game` object:
+
+```js
+import wollok.game.*
+
+program firstWollokGameProgram {
+  game.width(10)
+  game.height(10)
+  game.boardGround("beach.jpg") // replace here beach.jpg with the name you used
+  game.start()
+}
+```
+
+Now we see a new image in game board:
+
+![tablero con fondo especial](../../../documentacion/conceptos/images/tableroConFondoEspecial.png)
+
+From now on we will go back to default and less distracting background.
+
+
+#### Reporting errors
+
+When things go wrong, our main character catches error messages and alert us. Lets suppose we change collider block between our main character wollok and the box:
+
+```wollok
+program firstWollokGameProgram {
+  game.addVisualCharacter(wollok)  
+  game.addVisual(box)
+  game.whenCollideDo(wollok, { element => 
+    const a = 1 / 0 // force an error
+  })
+  game.start()
+}
+```
+
+When wollok and box collides, wollok reports a "division by zero" error:
+
+![wollok reporta error](../../../documentacion/conceptos/images/errorReporter1.gif)
+
+In Wollok Game, if there is a main character, it is responsible to catch and report any error inside the game. Otherwise, any visual object in board will do that.
+
+Anyway, we can configure _error reporter object_ to another object, such as the box:
+
+```js
+program firstWollokGameProgram {
+  //...
+  game.errorReporter(box)
+  //...
+```
+
+So lets see what happens now when wollok and the box collides and an error is thrown:
+
+![caja reporta error](../../../documentacion/conceptos/images/errorReporter2.gif)
+
+
 
 ### Troubleshooting
 
 Wollok Game works with Open GL 2.0 or greater. If you need to install or upgrade it, follow [this instructions](https://www.khronos.org/opengl/wiki/Getting_Started)
 
+
+### Error at start ###
+
+If you get the following error on REPL console when you start a game:
+
+```
+WARNING: An illegal reflective access operation has occurred
+WARNING: Illegal reflective access by org.lwjgl.LWJGLUtil$3 (file:/C:/Users/tommy/Downloads/Groxar/desktop/desktop/app/desktop-1.0.jar) to method java.lang.ClassLoader.findLibrary(java.lang.String)
+WARNING: Please consider reporting this to the maintainers of org.lwjgl.LWJGLUtil$3
+WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations
+WARNING: All illegal access operations will be denied in a future release
+```
+
+You may be using Java 9 version or greater. Our solution is installing Open JDK 1.8 in a different folder and configure Eclipse to use it:
+
+<div class="container text-center">
+  <img src="../../../documentacion/conceptos/images/wollokGameFallaJava9En.gif" class="img-fluid z-depth-1">
+</div>
+<br>
 
 #### Error in Ubuntu
 
@@ -439,9 +490,11 @@ Close and reopen Wollok environment and everything should work normally.
 
 #### Wollok Game problem in MacOS HighSierra
 
-Wollok Game uses SWT, an Eclipse component [with issues reported using in a MacOS High Sierra](https://bugs.eclipse.org/bugs/show_bug.cgi?id=525465). This problem will be solved in next version, meanwhile as a workaround you can install a VM in another operating system and work with it.
+Wollok Game uses SWT, an Eclipse component [with issues reported using in a MacOS High Sierra](https://bugs.eclipse.org/bugs/show_bug.cgi?id=525465). This problem will be solved in next version, meanwhile as a workaround is using Mojave or greater version you can install a VM in another operating system and work with it.
 
 
 ### More info
+
+You can download the full example in [this repository](https://github.com/wollok/ejemploGameSite).
 
 You can download [all these Wollok Game examples](https://github.com/wollok?utf8=%E2%9C%93&q=game&type=&language=) from Wollok repository. Enjoy them!
